http://192.168.1.135:6660/jira/browse/BB-105 Arreglos a violaciones